fix: text overflow issue on iOS 16

--- a/Stage1st/Resources/WebTemplate.bundle/css/content_base.css
+++ b/Stage1st/Resources/WebTemplate.bundle/css/content_base.css
@@ -5,6 +5,7 @@ img {
 
 a {
     display: inline-block;
+    text-overflow: ellipsis;
 }
 
 a img {
@@ -30,8 +31,14 @@ iframe {
 .i_table {
     border-radius: 0px;
     word-break: break-all;
+    overflow-wrap: break-word;
+    table-layout: fixed;
     font-family: 'HanHei SC', 'PingFang SC', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
     /*width: 90; for iPad in CSS file*/
+}
+
+.inner_table {
+    table-layout: fixed;
 }
 
 .t_f {
